Rebrand: Thay đổi tất cả 'Studio Project' thành 'LENSCAMDIO' trong toàn bộ website

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <!-- Why Choose Us Section -->
     <section class="section">
         <div class="container">
-            <h2 class="section-title">Tại sao chọn Studio Project?</h2>
+            <h2 class="section-title">Tại sao chọn LENSCAMDIO?</h2>
             <div class="row">
                 <div class="col-md-4 text-center mb-4">
                     <div class="feature-icon mb-3">
