--- a/my-booking.html
+++ b/my-booking.html
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6 mb-4">
-                    <h5>Studio Project</h5>
+                    <h5>LENSCAMDIO</h5>
                     <p>Không gian chụp ảnh chuyên nghiệp và dịch vụ cho thuê thiết bị hàng đầu tại Việt Nam.</p>
                     <div class="social-links mt-3">
                         <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
@@ -128,10 +128,10 @@
             <div class="footer-bottom">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <p class="mb-0">&copy; 2024 Studio Project. Tất cả quyền được bảo lưu.</p>
+                        <p class="mb-0">&copy; 2024 LENSCAMDIO. Tất cả quyền được bảo lưu.</p>
                     </div>
                     <div class="col-md-6 text-md-end">
-                        <p class="mb-0">Thiết kế bởi Studio Project Team</p>
+                        <p class="mb-0">Thiết kế bởi LENSCAMDIO Team</p>
                     </div>
                 </div>
             </div>
@@ -147,14 +147,14 @@
     <!-- Simple Chat Box -->
     <div id="chatbox-root">
       <div id="chatbox-container">
-        <div id="chatbox-header">Trợ lý AI Studio Project</div>
+        <div id="chatbox-header">Trợ lý AI LENSCAMDIO</div>
         <div id="chatbox-messages"></div>
         <div id="chatbox-input-row">
           <input id="chatbox-input" type="text" placeholder="Nhập câu hỏi...">
           <button id="chatbox-send">Gửi</button>
         </div>
       </div>
-      <button id="chatbox-toggle" title="Chat với Studio Project">
+      <button id="chatbox-toggle" title="Chat với LENSCAMDIO">
         <svg viewBox="0 0 24 24" fill="none">
           <path d="M4 19V7a3 3 0 0 1 3-3h10a3 3 0 0 1 3 3v8a3 3 0 0 1-3 3H7l-3 4z" fill="currentColor"/>
         </svg>
