--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
                             <!-- Left Side - Image -->
                             <div class="col-md-6 login-image">
                                 <div class="login-image-content">
-                                    <img src="https://images.unsplash.com/photo-1606983340126-99ab4feaa64a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Studio Project">
+                                    <img src="https://images.unsplash.com/photo-1606983340126-99ab4feaa64a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="LENSCAMDIO">
                                     <div class="login-image-overlay">
                                         <h3>Chào mừng đến với LENSCAMDIO</h3>
                                         <p>Trải nghiệm dịch vụ chụp ảnh chuyên nghiệp tốt nhất</p>
